removed overflow-y auto in attempt to fix safari footer not showing

--- a/app/globals.css
+++ b/app/globals.css
@@ -60,7 +60,7 @@ body {
   perspective: 1px;
   transform-style: preserve-3d;
   overflow-x: hidden;
-  overflow-y: auto;
+  /*overflow-y: auto;*/
 }
 
 .parallax {
